# fluid-registration

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  README.TXT  README.md  disk1.tif  disk2.tif  parallelFluidReg  parallelFluidRegistration.py  version.sh
lib/Windows/: fftw3.lib
lib/Windows-x86-64/: fftw3.lib
src/: .gitignore  fluidReg.cpp  test.cpp
src/filter/: GaussFilterX.cpp  GaussFilterX.hpp  GaussFilterY.cpp  GaussFilterY.hpp  MedianFilter.cpp  MedianFilter.hpp  ParallelGaussFilter.cpp  ParallelGaussFilter.hpp  RetinexFilter.cpp  RetinexFilter.hpp
src/fourier_transform/: CosFourier.cpp  CosFourier.hpp  Fourier.cpp  Fourier.hpp  InverseCosFourier.cpp  InverseCosFourier.hpp  InverseFourier.cpp  InverseFourier.hpp  InverseSinFourier.cpp  InverseSinFourier.hpp  SinFourier.cpp  SinFourier.hpp
src/registration/: FluidCurvatureRegistration.cpp  FluidCurvatureRegistration.hpp
src/segmentation/: Binarize.cpp  Binarize.hpp  HysteresisBinarize.cpp  HysteresisBinarize.hpp  OptimalBinarize.cpp  OptimalBinarize.hpp
src/solver/: RKNystroem.cpp  RKNystroem.hpp  RKV43.cpp  RKV43.hpp
src/templates/: ImageTemplate.hpp  Parameters.hpp  Point2D.hpp  Vector2D.hpp  VectorArray2D.cpp  VectorArray2D.hpp
src/utilities/: BracketMethod.cpp  BracketMethod.hpp  ImageDifference.cpp  ImageDifference.hpp  Utilities.cpp  Utilities.hpp
